--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caja de Comentarios</title>
+    <title>Foro de opiniones sobre Libros</title>
     <link rel="stylessheet" href = "styles.css">
 </head>
 <body>
     <div class="container">
-        <h2>Caja de Comentarios</h2>
+        <h2>Caja de Opiniones</h2>
         
         <div class="comment-box">
             <textarea id="comment-input" placeholder="Escribe tu comentario aquí..."></textarea>
-            <button id="add-comment">Agregar Comentario</button>
+            <button id="add-comment">Agregar Comentario:</button>
         </div>
 
         <div id="comments-section">
-            <h3>Comentarios</h3>
+            <h3>Comentarios de lectores</h3>
             <ul id="comments-list"></ul>
         </div>
     </div>
