--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foro de opiniones sobre Libros</title>
-    <link rel="stylessheet" href = "styles.css">
+    <link rel="stylessheet" href = "estilo.css">
 </head>
 <body>
     <div class="container">
@@ -12,7 +12,7 @@
         
         <div class="comment-box">
             <textarea id="comment-input" placeholder="Escribe tu comentario aquí..."></textarea>
-            <button id="add-comment">Agregar Comentario:</button>
+            <button id="add-comment">Agregar Comentario</button>
         </div>
 
         <div id="comments-section">
