cambio en html y style para centrar

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foro de opiniones sobre Libros</title>
-    <link rel="stylessheet" href = "estilo.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <div class="container">
-        <h2>Caja de Opiniones</h2>
+        <h2>Caja Opiniones de Libros</h2>
         
         <div class="comment-box">
             <textarea id="comment-input" placeholder="Escribe tu comentario aquí..."></textarea>
